# myaa

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  dev.py  personas.yaml  pyproject.toml
config/characters/: example.yaml
myaa/adapter/discord/: run.py
myaa/config/: prompt_defaults.py
myaa/data/: cache.py  data_server.py
myaa/domain/: command.py  context.py  message.py  state.py
myaa/logic/: agent_state.py  chat_agent.py  input_manager.py  orchestrator.py  output_manager.py
myaa/logic/domain/: character.py  command.py  context.py  message.py  state.py
myaa/logic/formatter/: prompt_formatter.py
myaa/logic/provider/: abstract.py  base.py  gemini_provider.py
myaa/resources/characters/: example.yaml
myaa/src/: graph_setup.py  session_manager.py
myaa/src/tools/: nature_cli.py  user_db.py
