[project]
name = "myaa"
version = "0.1.0"
description = "Minimal LangGraph-powered Discord assistant"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.4.3",
    "langchain-tavily==0.1.6",
    "discord.py>=2.5.2",
    "python-dotenv>=1.1.0",
    "openai>=1.78.1",
    "tqdm>=4.66.5",
    "google-generativeai>=0.8.5",
    "google-ai-generativelanguage>=0.6.15"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.8",
    "pytest>=8.3.5",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12"
]

[tool.setuptools]
packages = ["myaa"]

[tool.uv]
index-url = "https://pypi.org/simple"

[project.scripts]
run-discord = "myaa.adapter.discord.run:entrypoint"